--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -3,3 +3,8 @@
     width: 670px;
     margin-left: 39px;
 }
+.hover-Icons-Caragory:hover{
+background-color: rgb(209 213 219 );
+border-radius: 10px;
+
+}
